--- a/assets/styles/autoMap.css
+++ b/assets/styles/autoMap.css
@@ -1,9 +1,14 @@
 
 body {
-    padding: 16px;
-    font-family: FreeMono, monospace;
-    color: white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 32px;
+    font-size: 16px;
     background-color: #252526;
+    color: #fff;
+    font-family: FreeMono, monospace;
+    width: 50%;
 }
 
 p {
@@ -27,7 +32,7 @@ pre {
 
 hr {
     border-color: #30382c;
-    width: 50%;
+    width: calc(100% +16px);
     margin-left: -8px;
 }
 
@@ -52,6 +57,7 @@ code {
     font-size: 16px;
     border-radius: 10px;
     padding: 10px 16px !important;
+    overflow-x: scroll;
 }
 
 #copyDaoCode {
@@ -62,11 +68,13 @@ input[type=text] {
     outline: none;
     border: none;
     color: white;
+    width: 95%;
     font-size: 16px;
     padding: 4px 8px;
-    margin: 6px 0;
+    margin: 10px 0;
     border-bottom: 1px solid #0c7d9d;
     background-color: #333333;
+    box-sizing: border-box;
 }
 
 /* TOOLTIP */
@@ -124,6 +132,9 @@ input[type=text] {
 .tableList {
     margin: 4px 0;
     text-decoration: underline;
+    max-height: 280px;
+    overflow-y: scroll;
+    background-color: #0002;
 }
 .tableList a {
     cursor: pointer;
