--- a/assets/styles/examples.css
+++ b/assets/styles/examples.css
@@ -4,10 +4,11 @@ body {
     left: 50%;
     transform: translateX(-50%);
     padding: 8px 32px;
-    font-size: 17px;
+    font-size: 16px;
     background-color: #252526;
     color: #fff;
     font-family: FreeMono, monospace;
+    width: 50%;
 }
 .code {
     color: #dcdcaa;
@@ -26,8 +27,8 @@ b {
 }
 hr {
     border-color: #30382c;
-    width: 90%;
-    margin-left: -16px;
+    width: calc(100% +16px);
+    margin-left: -8px;
 }
 .author {
     color: #777;
