--- a/assets/styles/examples.css
+++ b/assets/styles/examples.css
@@ -1,15 +1,4 @@
 
-body {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 8px 32px;
-    font-size: 16px;
-    background-color: #252526;
-    color: #fff;
-    font-family: FreeMono, monospace;
-    width: 50%;
-}
 .code {
     color: #dcdcaa;
     background-color: #1e1e1e;
@@ -26,7 +15,7 @@ b {
     font-weight: 600;
 }
 hr {
-    border-color: #30382c;
+    border-color: #3c3731;
     width: calc(100% +16px);
     margin-left: -8px;
 }
@@ -38,6 +27,7 @@ hr {
 .comment {
     color: #d4d4d4;
     text-align: justify;
+    padding: 6px;
     padding-left: 32px;
 }
 
@@ -66,7 +56,7 @@ hr {
     padding-top: 4px;
     padding-bottom: 4px;
     text-align: left;
-    background-color: #1c647c;
+    background-color: #437eaa;
     color: white;
 }
 /* width */
